--- a/next-app/styles/LandingPage.module.css
+++ b/next-app/styles/LandingPage.module.css
@@ -9,9 +9,28 @@
 	border-bottom-right-radius: 20px;
 }
 
-.div__logo {
-	padding: 5px 20px;
+.container__up {
 	width: 100%;
+	/* max-height: 80px; */
+	position: relative;
+}
+
+.div__logo {
+	position: absolute;
+	padding: 5px 20px;
+	width: 50%;
+}
+
+.login__button_1 {
+	display: none;
+	position: absolute;
+	margin-top: 29.5px;
+	margin-right: 50px;
+	width: 50%;
+	/* height: 100%; */
+	/* bottom: 180%; */
+	left: 80%;
+
 }
 
 .div__player {
@@ -26,7 +45,7 @@
 .container__right {
 	width: 50%;
 	height: 100%;
-	position: fixed;
+	position: absolute;
 	top: 0;
 	color: white;
 	background-color: rgb(25, 32, 41);
@@ -43,11 +62,12 @@
 }
 
 .login__image {
+	max-height: 315px;
 	position: absolute;
 	top: 2%;
 	right: 80%;
 	width: 35%;
-	height: 35%;
+	height: 16vw;
 	overflow: hidden;
 	border-radius: 12px;
 }
@@ -62,4 +82,18 @@
 	right: 15%;
 	width: 100%;
 	
+}
+
+
+@media (max-width: 500px) {
+	.container__left {
+		width: 100%;
+	}
+	.container__right {
+		display: none;
+	}
+
+	.login__button_1 {
+		display: block;
+	}
 }
