--- a/next-app/styles/globals.css
+++ b/next-app/styles/globals.css
@@ -3,14 +3,23 @@ body {
   padding: 0;
   margin: 0;
   background-color: rgb(25, 32, 41);
+  color: white;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   overflow-x: hidden;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
+  /* border: 10px solid white; */
   /* display: none; */
   
 }
+
+/* .holder {
+  
+  border: 10px solid white;
+} */
+
+
 
 a {
   color: inherit;
