--- a/next-app/styles/Profile.css
+++ b/next-app/styles/Profile.css
@@ -23,8 +23,9 @@
 	position: sticky;
 	justify-content: space-between;
 	top: 0;
-	background-color: rgba(22, 28, 36, 0.5);
+	background-color: rgba(22, 28, 36, 0.73);
 	padding: .5rem .5rem;
+	z-index: 1;
 }
 
 .logo-container {
@@ -254,6 +255,7 @@
 	display: flex;
 	flex: 0 0 auto;
 	flex-direction: row;
+	/* min-height: 800px; */
 	/* border: 1px solid yellow; */
 	/* background-color: #ff3030; */
 }
@@ -280,19 +282,144 @@
 	width: 70%;
 	max-width: 1200px;
 	height: 300px;
+	min-height: 250px;
 	overflow: hidden;
-	min-width: 360px;
+	min-width: 300px;
+	transition: 450ms ease-in-out;
 }
 
 .profile-data {
 	display: flex;
 	width: 70%;
+	flex-direction: row;
+	justify-content: space-between;
+	gap: 10px;
+	/* justify-content: center; */
 	max-width: 1200px;
-	border: 1px solid white;
+	min-width: 300px;
+	min-height: 1000px;
+	/* border: 1px solid white; */
 	border-radius: 12px;
 	height: calc(100vh - 350px - var(--header-height));
-	min-width: 360px;
+	/* min-width: 860px; */
 	overflow-x: auto;
+}
+
+.profile-data-row1 {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-evenly;
+	gap: 5px;
+	width: 30%;
+	height: 16%;
+	/* border: 1px solid red; */
+	background-color: var(--primary-color);
+	border-radius: 12px;
+	margin-top: 1.6rem;
+}
+
+.profile-data-row2 {
+	width: 65%;
+	height: 100%;
+	/* border: 1px solid blue; */
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+}
+
+.history-label {
+	width: 100%;
+	height: 45%;
+	/* border: 1px solid wheat; */
+	border-radius: 12px;
+	/* margin-top:3rem; */
+	background-color: var(--primary-color);
+}
+
+.friends-label {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: flex-start;
+	gap: 10px;
+	width: 100%;
+	height: 45%;
+	/* border: 1px solid whitesmoke; */
+	border-radius: 12px;
+	/* margin-top:3rem; */
+	background-color: var(--primary-color);
+	/* overflow-y: scroll; */
+}
+
+.friends-card::-webkit-scrollbar {
+	display: none;
+}
+
+/* .friends-card {
+	-ms-overflow-style: none;
+	scrollbar-width: none;
+} */
+
+.friends-label-header {
+	/* display: flex; */
+	box-sizing: border-box;
+	text-align: left;
+	padding-top: 20px;
+	/* align-items: center; */
+	/* justify-content: flex-start; */
+	/* justify-content: space-between; */
+	/* border: 1px solid white; */
+	width: 100%;
+	height: 50px;
+	/* overflow-y: scroll; */
+}
+
+.friends-label-header h4 {
+	margin-left: 32px;
+	font-size: 1.4rem;
+	font-weight: 300;
+}
+
+.list-of-friends {
+	display: flex;
+	width: 100%;
+	height: auto;
+	flex-direction: column;
+	align-items: center;
+	justify-content: flex-start;
+	overflow-y: scroll;
+}
+
+.friends-card {
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: space-evenly;
+	height: 70px;
+	overflow: hidden;
+	border-radius: 12px;
+	margin-top: 10px;
+	/* border: 1px solid salmon; */
+	cursor: pointer;
+	background-color: #333d49;
+	position: relative;
+}
+
+.friends-card-img {
+	display: flex;
+	width: 60px;
+	height: 60px;
+	border: 1px solid white;
+	overflow: hidden;
+	position: relative;
+	right: 10%;
+	border-radius: 50%;
+}
+
+.friends-card-name {
+	/* padding-right: 40%; */
 }
 
 .profile-wall-bg {
@@ -315,7 +442,9 @@
 	height: 115px;
 	border: 1px solid white;
 	overflow: hidden;
-	transition-duration: 700ms;
+	transition-duration: 450ms;
+	transition-timing-function: ease-in-out;
+
 }
 
 .profile-wall-nav {
@@ -340,12 +469,13 @@
 	/* width: 80px; */
 	cursor: pointer;
 	padding: 5px;
+	border-bottom: 1px solid #212b36;
 
 }
 
 .profile-btn-div:hover {
 	background-color: var(--hover-background);
-	border-bottom: 1px solid white;
+	/* border-bottom: 1px solid white; */
 	color: white;
 }
 
@@ -355,9 +485,79 @@
 	fill: var(--text-sidebar-color);
 }
 
-@media (max-width: 770px) {
+.statics-header {
+	position: relative;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	height: 20%;
+}
+
+.statics-header h4 {
+	position: absolute;
+	top: 50%;
+	font-size: 20px;
+	font-weight: 350;
+}
+
+.statics-games {
+	display: flex;
+	width: 100%;
+	height: 80%;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	/* border: 1px solid mediumaquamarine; */
+}
+
+.statics-win, .statics-loss {
+	width: 50%;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	
+}
+.hr-line {
+	height: 50px;
+	border: none;
+	border-right: 1.2px solid var(--text-sidebar-color);
+
+}
+.p-statics {
+	display: flex;
+	color: #86929f;
+	font-size: 1.5rem;
+	font-weight: 200;
+}
+
+.h3-statics {
+	color: white;
+	font-size: 2rem;
+	font-weight:300;
+}
+
+
+
+
+
+
+
+@media (max-width: 700px) {
 	.sidebar:hover {
 		width: 80px;
+	} 
+
+	.profile-wall {
+		height: 250px;
+		width: 92%;
+		transition: 450ms ease-in-out;
+	}
+
+	.profile-data {
+		width: 92%;
 	}
 
 	.profile-wall-nav {
@@ -366,15 +566,65 @@
 	}
 
 	.profile-wall-img-user {
-		top: 25%;
-		left: 40%;
-		width: 100px;
-		/* align-items: center;
-		justify-content: center; */
-		height: 100px;
-		transition-duration: 900ms;
-		/* animation: top var(--animation-duration) var(--animation-timing-curve);
-		animation: width var(--animation-duration) var(--animation-timing-curve);
-		animation: width var(--animation-duration) var(--animation-timing-curve); */
+		left: 40.6%;
+		top: 30%;
+		width: 95px;
+		height: 95px;
+		transition-duration: 450ms;
+		transition-timing-function: ease-in-out;
 	}
+}
+
+@media (max-width: 900px)
+{
+
+	.profile-data {
+		width: 92%;
+		flex-direction: column;
+	}
+	.profile-wall {
+		height: 250px;
+		width: 92%;
+		transition: 450ms ease-in-out;
+	}
+	
+	.profile-data {
+		width: 92%;
+		flex-direction: column;
+	}
+	
+	.profile-data-row1, .profile-data-row2 {
+		width: 100%;
+		transition: 500ms ease-in-out;
+	}
+	
+	.profile-data-row1 {
+		height: 25%;
+	}
+}
+
+@media (max-width: 550px) {
+	.sidebar:hover {
+		width: 80px;
+	}
+	.sidebar {
+		display: none;
+	}
+
+
+
+	.profile-wall-nav {
+		justify-content: space-around;
+		/* animation: justify-content var(--animation-duration) var(--animation-timing-curve); */
+	}
+
+	.profile-wall-img-user {
+		left: 35.6%;
+		top: 30%;
+		width: 95px;
+		height: 95px;
+		transition-duration: 450ms;
+		transition-timing-function: ease-in-out;
+	}
+
 }
