--- a/next-app/styles/Profile.css
+++ b/next-app/styles/Profile.css
@@ -579,19 +579,49 @@
 
 .edit-modal {
 	background-color: var(--primary-color);
-	width: 50vw;
-	height: 50vh;
-	max-width: 770px;
-	max-height: 600px;
+	width: 370px;
+	height: 450px;
+	/* max-width: 500px;
+	max-height: 450px; */
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 	/* border: 0.1px solid white; */
 	border-radius: 12px;
 	position: fixed;
+	display: flex;
+	align-items: center;
+	justify-content: space-evenly;
+	flex-direction: column;
 	z-index: 1000;
 
 }
+.modal-picture {
+	width: 300px;
+	height: 150px;
+	display: flex;
+	border: 1px solid red;
+}
+
+.modal-data {
+	width: 300px;
+	height: 100px;
+	border: 1px solid yellow;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-evenly;
+}
+.modal-buttons {
+	width: 300px;
+	height: 50px;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: space-evenly;
+}
+
+
 
 .overlay-modal{
 	position: fixed;
