--- a/next-app/styles/Profile.css
+++ b/next-app/styles/Profile.css
@@ -39,8 +39,13 @@
 	display: flex;
 	justify-content: space-evenly;
 	align-items: center;
-	width: 8rem;
+	width: 12rem;
 	flex-direction: row;
+}
+
+.header-user-name {
+	color: #919eab;
+	/* font-weight: 600; */
 }
 
 .user-container {
@@ -579,8 +584,8 @@
 
 .edit-modal {
 	background-color: var(--primary-color);
-	width: 370px;
-	height: 450px;
+	width: 350px;
+	height: 400px;
 	/* max-width: 500px;
 	max-height: 450px; */
 	top: 50%;
@@ -600,18 +605,42 @@
 	width: 300px;
 	height: 150px;
 	display: flex;
-	border: 1px solid red;
+	align-items: center;
+	justify-content: space-evenly;
+	/* border: 1px solid red; */
+	margin-bottom: -25px;
+}
+
+.modal-picture-container {
+	position: relative;
+	width: 95px;
+	height: 95px;
+	overflow: hidden;
+	border-radius: 50px;
 }
 
 .modal-data {
 	width: 300px;
 	height: 100px;
-	border: 1px solid yellow;
+	/* border: 1px solid yellow; */
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: space-evenly;
 }
+
+.modal-data-input {
+	margin-right: 60px;
+	/* color: white; */
+	/* margin-bottom: 10px; */
+}
+
+.modal-two-factor {
+	margin-right: 60px;
+	padding-top: 20px;
+}
+
+
 .modal-buttons {
 	width: 300px;
 	height: 50px;
