--- a/next-app/styles/Profile.css
+++ b/next-app/styles/Profile.css
@@ -39,7 +39,7 @@
 	display: flex;
 	justify-content: space-evenly;
 	align-items: center;
-	width: 12rem;
+	width: 8rem;
 	flex-direction: row;
 }
 
@@ -300,6 +300,7 @@
 	justify-content: space-between;
 	gap: 10px;
 	/* justify-content: center; */
+
 	max-width: 1200px;
 	min-width: 300px;
 	min-height: 1000px;
@@ -613,8 +614,8 @@
 
 .modal-picture-container {
 	position: relative;
-	width: 95px;
-	height: 95px;
+	width: 100px;
+	height: 100px;
 	overflow: hidden;
 	border-radius: 50px;
 }
@@ -622,7 +623,6 @@
 .modal-data {
 	width: 300px;
 	height: 100px;
-	/* border: 1px solid yellow; */
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -631,13 +631,11 @@
 
 .modal-data-input {
 	margin-right: 60px;
-	/* color: white; */
-	/* margin-bottom: 10px; */
 }
 
 .modal-two-factor {
 	margin-right: 60px;
-	padding-top: 20px;
+	padding-top: 10px;
 }
 
 
@@ -648,6 +646,21 @@
 	flex-direction: row;
 	align-items: center;
 	justify-content: space-evenly;
+}
+
+.wall-friend-card {
+	/* margin: 20px 20px; */
+	padding: 0;
+	border-radius: 12px;
+	border: 0.4px solid #919eab;
+	width: 220px;
+	height: 230px;
+	cursor: pointer;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-evenly;
+	background-color: #212b36;
 }
 
 
